--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -109,7 +109,7 @@
 .hero-title-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: flex-end; /* Align items to the left */
+  /* align-items: flex-start; Align items to the left */
 }
 
 .hero-text h1 {
@@ -319,6 +319,7 @@
   font-style: italic;
   font-weight: bold; /* Make the text bold */
   color: #E3B341; /* Gold color */
+  text-align-last: right; /* Align the last line to the right */
   letter-spacing: 1px;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
   /* padding-left: 0.2em; Align slightly with the text above */
